objects/Training_Event_Team__c.object
<CustomObject>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Team Member’s Phone</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Send_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box to send notification to Team Member</description>
        <label>Send Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Email__c</fullName>
        <formula>Training_Team_Member__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Member_Team_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <description>User checks the box to add Team Member to Training Event</description>
        <label>Training Events Team Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <formula>Training_Team_Member__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Status__c</fullName>
        <formula>text(Training_Event_Team__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Event_Team__c</fullName>
        <label>Training Event</label>
        <referenceTo>Training_Event__c</referenceTo>
        <relationshipLabel>Training Event Team</relationshipLabel>
        <relationshipName>Training_Event_Teams</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Training_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Training Team Members monitoring Training Events</description>
        <label>Training Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Event_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Training Event Team</label>
    <nameField>
        <displayFormat>M-{0000000}</displayFormat>
        <label>Training Event Team</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Event Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>